[package]
name = "rustacean"
version = "0.1.0"
authors = ["Yohann Jerrain <y.jerrain@gmail.com>"]

[dependencies]
simplelog = "0.5.3"
log = "0.4.6"
rand = "0.6.5"
duct = "0.12"
regex = "1.1.5"
toml = "0.5.0"
serde = "1.0.90"
chrono = "0.4.6"
typemap = "0.3.3"
reqwest = "0.9.13"
openssl-sys = "0.9.43"
serde_derive = "1.0.90"
diesel = { version = "1.4.2", features = [ "sqlite", "r2d2" ] }

[dependencies.serenity]
features = ["cache", "framework", "standard_framework"]
version = "0.5.13"
