[package]
name = "rustacean"
version = "0.1.0"
authors = ["Yohann Jerrain <y.jerrain@gmail.com>"]
edition = "2018"

[dependencies]
simplelog = "0.7.4"
log = "0.4.8"
rand = "0.7.3"
duct = "0.12.0"
regex = "1.3.4"
toml = "0.5.6"
serde = "1.0.104"
chrono = "0.4.10"
typemap = "0.3.3"
openssl-sys = "0.9.54"
serde_derive = "1.0.104"
diesel = { version = "1.4.3", features = [ "sqlite", "r2d2" ] }
reqwest = { version = "0.10.2", features = [ "json", "blocking" ] }

[dependencies.serenity]
features = ["cache", "framework", "standard_framework"]
version = "0.5.13"
